# the-marriage-of-ferris

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
.github/workflows/: serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
create_household/: Cargo.toml
create_household/src/: main.rs
get_household/: Cargo.toml
get_household/src/: main.rs
models/: Cargo.toml
models/src/: contact_status.rs  dietary_restrictions.rs  dish_preferences.rs  household.rs  lib.rs  person.rs  rsvp.rs
services/: Cargo.toml
services/src/: household.rs  lib.rs
src/: create_household.rs  mod.rs
src/controllers/: mod.rs
src/controllers/create_household/: main.rs
src/create_household/: Cargo.toml
src/models/: Cargo.toml  household.rs  mod.rs  person.rs  rsvp.rs
src/models/src/: dish_preferences.rs  household.rs  person.rs
src/services/: Cargo.toml  household.rs
src/services/src/: mod.rs
